# pgdev

./: .gitignore  .gitmodules  CODE_REVIEW.md  FLUSH_COST_ANALYSIS.md  README_FLUSH_COST.md  SUBLINK_PULLUP_PUSHDOWN_SPEC.md  analyze_flush_cost.sql  date-trunc-rewrite-spec.md  force_PWJ_AJ.patch  measure_flush_cost.py  pgct  pret  query.sql  replan_test.sql  test.sql  test_different_index_per_partition.sql  test_local_buffer_flush_cost.sql  test_mergeappend_sort.sql  test_mergeappend_sort_join.sql
.claude/skills/: architect-lead  coder-lead  doc-reviewer  doc-writer  reviewer-1  reviewer-2  reviewer-3  reviewer-4  reviewer-lead  tester-lead
.github/workflows/: pr-check.yml
claude-skills/architect-lead/: SKILL.md
claude-skills/coder-lead/: SKILL.md
claude-skills/doc-reviewer/: SKILL.md
claude-skills/doc-writer/: SKILL.md
claude-skills/reviewer-lead/: SKILL.md
claude-skills/tester-lead/: SKILL.md
contrib/: Makefile  meson.build
contrib/amcheck/: verify_nbtree.c
contrib/auto_dump/: Makefile  auto_dump--1.0--1.1.sql  auto_dump--1.0.sql  auto_dump.c  auto_dump.control  meson.build
contrib/auto_explain/: auto_explain.c
contrib/auto_explain/t/: 001_auto_explain.pl
contrib/bloom/: blutils.c
contrib/dbcopies_decoding/: Makefile  dbcopies_decoding.c  meson.build
contrib/dbcopies_decoding/expected/: simple.out
contrib/dbcopies_decoding/sql/: simple.sql
contrib/earthdistance/expected/: earthdistance.out
contrib/fasttrun/: fasttrun.c  meson.build
contrib/file_fdw/output/: file_fdw.source
contrib/fulleq/: Makefile  README.fulleq  fulleq--2.0.sql.in  fulleq.c  fulleq.control  generate.sh  meson.build
contrib/fulleq/sql/: fulleq.sql
contrib/intarray/: _int_selfuncs.c
contrib/mchar/: Makefile  mchar--2.0.1--2.1.sql  mchar--2.1.1--2.2.sql  mchar--2.2--2.2.1.sql  mchar--2.2.1.sql  mchar.control  mchar.h  mchar_io.c  mchar_like.c  meson.build
contrib/mchar/expected/: like.out  mchar.out
contrib/mchar/sql/: like.sql  mchar.sql
contrib/online_analyze/: meson.build  online_analyze.c
contrib/pg_ext_planner/: Makefile  README.md  pg_ext_planner.c
contrib/pg_ext_planner/expected/: memoize_subplan.out
contrib/pg_ext_planner/sql/: memoize_subplan.sql
contrib/pg_extension/: Makefile  pg_extension.c  pg_extension.control
contrib/pg_overexplain/: pg_overexplain.c
contrib/pg_overexplain/expected/: pg_overexplain.out
contrib/pg_overexplain/sql/: pg_overexplain.sql
contrib/pg_prewarm/t/: 001_basic.pl
contrib/pg_repeater/: Makefile  pg12_devel.patch  repeater.c  repeater.control
contrib/pg_stat_statements/: Makefile  pg_stat_statements--1.10--1.11.sql  pg_stat_statements.c
contrib/pg_stat_statements/expected/: level_tracking.out  oldextversions.out
contrib/pg_stat_statements/sql/: oldextversions.sql
contrib/pg_stat_statements/t/: 001_queryid_portability.pl
contrib/pg_surgery/: Makefile  heap_surgery.c  pg_surgery--1.0.sql
contrib/pg_surgery/expected/: heap_surgery.out
contrib/pg_surgery/sql/: heap_surgery.sql
contrib/pg_wait_sampling/: .travis.yml  pg_wait_sampling.c
contrib/plantuner/: meson.build  plantuner.c
contrib/postgres_fdw/: Makefile  connection.c  deparse.c  option.c  postgres_fdw.c  postgres_fdw.h
contrib/postgres_fdw/expected/: postgres_fdw.out
contrib/postgres_fdw/sql/: postgres_fdw.sql
contrib/postgres_fdw/t/: 001_bank_coordinator.pl  002_bank_participant.pl
doc/src/sgml/: config.sgml  contrib.sgml  filelist.sgml  parallel.sgml  pgstatstatements.sgml  postgres.sgml  spi.sgml
docs/pgconf_dev_2026/: README.md  draft_analysis_and_improvements.md  key_code_snippets_for_slides.md  pgconf_abstract_250words.md  pgconf_abstract_revised.md
src/backend/access/: Makefile
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: catalog.c  dependency.c  heap.c  index.c  indexing.c  namespace.c  pg_namespace.c  pg_subscription.c  storage.c  system_views.sql  toasting.c
src/backend/commands/: Makefile  analyze.c  copy.c  copyfrom.c  copyfromparse.c  explain.c  extension.c  meson.build  prepare.c  sequence.c  subscriptioncmds.c  tablecmds.c  vacuum.c  vacuumlazy.c  variable.c
src/backend/executor/: execAsync.c  execExpr.c  execExprInterp.c  execGrouping.c  execMain.c  execParallel.c  execProcnode.c  execScan.c  execTuples.c  execUtils.c  instrument.c  nodeAgg.c  nodeGather.c  nodeGatherMerge.c  nodeHash.c  nodeHashjoin.c  nodeMaterial.c  nodeModifyTable.c  nodeNestloop.c  nodeSubplan.c
src/backend/lib/: rbtree.c
src/backend/nodes/: copyfuncs.c  gen_node_support.pl  nodeFuncs.c  outfuncs.c  queryjumblefuncs.c  readfuncs.c  value.c
src/backend/optimizer/: README
src/backend/parser/: analyze.c  gram.y  parse_clause.c  parse_coerce.c  parse_relation.c  parse_utilcmd.c
src/backend/partitioning/: partprune.c
src/backend/postmaster/: Makefile  autovacuum.c  bgheap.c  bgworker.c  checkpointer.c  pgstat.c  postmaster.c  relcleaner.c
src/backend/rewrite/: rewriteHandler.c  rewriteManip.c
src/backend/statistics/: dependencies.c  extended_stats.c
src/backend/tcop/: Makefile  cmdtag.c  postgres.c  pquery.c  replan.c  utility.c
src/backend/tsearch/: ts_typanalyze.c
src/backend/utils/: errcodes.txt  probes.d
src/include/: fmgr.h  miscadmin.h  pgstat.h  port.h
src/include/access/: amapi.h  clog.h  csn_log.h  csn_snapshot.h  csnlog.h  genam.h  generic_xlog.h  global_csn_log.h  global_snapshot.h  heapam.h  nbtree.h  nbtxlog.h  parallel.h  printtup.h  relscan.h  rmgrlist.h  tempcat.h  twophase.h  xact.h  xlog_internal.h
src/include/catalog/: catversion.h  index.h  pg_am.h  pg_class.h  (+3 more)
src/port/: win32fdatasync.c  win32gettimeofday.c  win32ntdll.c
src/test/modules/test_pathcheck/: Makefile  meson.build  test_pathcheck--1.0.sql  test_pathcheck.c  test_pathcheck.control
src/test/modules/test_pathcheck/t/: 001_double_add.pl  002_multi_statement.pl
src/test/modules/test_plan_cache/: Makefile  meson.build  test_plan_cache--1.0.sql  test_plan_cache.c  test_plan_cache.control
src/test/modules/test_plan_cache/expected/: test_plan_cache.out
src/test/modules/test_plan_cache/sql/: test_plan_cache.sql
(+341 files in other folders)
